add swar algorithm implementation